Updated homepage fix to keep from overlapping of bumpboxes

--- a/resources/css/local/site_wide.less
+++ b/resources/css/local/site_wide.less
@@ -124,6 +124,7 @@ body{
 
 	.nested_navigation;
 
+	z-index:20;
 }
 
 #search{
